<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:foregroundGravity="center"
            android:src="@drawable/fotka"
            android:background="@color/meno"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/meno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/meno_text"
            android:textSize="25sp"
            android:background="@drawable/meno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/o_mne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/o_mne_nadpis"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meno" />

        <TextView
            android:id="@+id/text_o_mne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/o_mne"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/o_mne" />

        <TextView
            android:id="@+id/pracovne_skusenosti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/pracovne_skusenosti_nadpis"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_o_mne" />

        <TextView
            android:id="@+id/nay_rok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/nay_rok"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pracovne_skusenosti" />

        <TextView
            android:id="@+id/nay_lokacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nay_lokalizacia"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nay_rok" />

        <TextView
            android:id="@+id/nay_praca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nay_popis"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nay_lokacia" />

        <TextView
            android:id="@+id/alfa_rok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/alfa_rok"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nay_praca" />

        <TextView
            android:id="@+id/alfa_lokacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alfa_lokalizacia"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alfa_rok" />

        <TextView
            android:id="@+id/alfa_praca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alfa_popis"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alfa_lokacia" />

        <TextView
            android:id="@+id/neografia_rok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neografia_rok"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alfa_praca" />

        <TextView
            android:id="@+id/neografia_lokacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neografia_lokalizacia"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neografia_rok" />

        <TextView
            android:id="@+id/neografia_praca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neografia_popis"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neografia_lokacia"/>

        <TextView
            android:id="@+id/vzdelanie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/vzdelanie"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_goneMarginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neografia_praca"/>

        <TextView
            android:id="@+id/vzdelanie_nazov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/alfa_rok"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vzdelanie"/>

        <TextView
            android:id="@+id/vzdelanie_odbor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vzdelanie_odbor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vzdelanie_nazov"/>

        <TextView
            android:id="@+id/znalosti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/znalosti"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_goneMarginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vzdelanie_odbor"/>

        <TextView
            android:id="@+id/znalosti_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_znalosti"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/znalosti"/>

        <TextView
            android:id="@+id/jazyky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/jazyky"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_goneMarginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/znalosti_list"/>

        <TextView
            android:id="@+id/jazyky_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jazyky_list"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jazyky"/>

        <TextView
            android:id="@+id/vp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/vp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_goneMarginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jazyky_list"/>

        <TextView
            android:id="@+id/vp_skupina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vp_skupina"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vp"/>

        <TextView
            android:id="@+id/certifikacie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/certifikácie"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_goneMarginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vp_skupina"/>

        <TextView
            android:id="@+id/google_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_it_nazov"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/certifikacie"/>

        <TextView
            android:id="@+id/it_vydavatelia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_it_vydavatelia"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_it"/>

        <TextView
            android:id="@+id/digital_marketing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digital_margeting"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/it_vydavatelia"/>

        <TextView
            android:id="@+id/digital_marketing_vydavatelia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digital_marketing_vydavatelia"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/digital_marketing"/>

        <TextView
            android:id="@+id/erasmus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erasmus"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/digital_marketing_vydavatelia"/>

        <TextView
            android:id="@+id/erasmus_vydavatelia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erasmus_vydavatelia"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/erasmus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/erasmus_vydavatelia"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>